--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hurmet</title>
+<title>Hurmet.app</title>
 
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="lib/codemirror.css">
