--- a/site/index.html
+++ b/site/index.html
@@ -27,6 +27,7 @@
 <nav>
    <ul>
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
+     <li><a href="./docs/en/manual.html#tutorial" target="_blank">Tutorial</a></li>
      <li><a href="./docs/en/manual.html" target="_blank">Documentation</a></li>
      <li><a href="./examples.html" target="_blank">Examples</a></li>
    </ul>
