--- a/preview/index.html
+++ b/preview/index.html
@@ -19,6 +19,7 @@
 <script src="../site/lib/simple.js"></script>
 <script src="../site/katex/katex.min.js"></script>
 <script src="../site/katex/mhchem.min.js"></script>
+<script src="../site/marked.js"></script>
 <script src="../site/chart.min.js"></script>
 <script src="hurmet.js"></script>
 </head>
