--- a/site/index.html
+++ b/site/index.html
@@ -19,6 +19,7 @@
 <script src="lib/simple.js"></script>
 <script src="katex/katex.min.js"></script>
 <script src="katex/mhchem.min.js"></script>
+<script src="marked.js"></script>
 <script src="chart.min.js"></script>
 <script src="hurmet.min.js"></script>
 </head>
