--- a/site/examples.html
+++ b/site/examples.html
@@ -13,14 +13,14 @@
 <link rel="stylesheet" href="tables.css">
 <link rel="stylesheet" media="print" href="print.css">
 
-<script src="lib/codemirror.js"></script>
-<script src="lib/closebrackets.js"></script>
-<script src="lib/matchbrackets.js"></script>
-<script src="lib/simple.js"></script>
+<script src="lib/codemirror.js" defer></script>
+<script src="lib/closebrackets.js" defer></script>
+<script src="lib/matchbrackets.js" defer></script>
+<script src="lib/simple.js" defer></script>
 <script src="katex/katex.min.js"></script>
-<script src="katex/mhchem.min.js"></script>
-<script src="marked.js"></script>
-<script src="chart.min.js"></script>
+<script src="katex/mhchem.min.js" defer></script>
+<script src="marked.js" defer></script>
+<script src="chart.min.js" async></script>
 <script src="hurmet.min.js"></script>
 </head>
 
