--- a/preview/index.html
+++ b/preview/index.html
@@ -7,16 +7,16 @@
 <title>Hurmet.app</title>
 
 <link rel="stylesheet" href="../site/styles.css">
-<link rel="stylesheet" href="../site/lib/codemirror.css">
+<link rel="stylesheet" href="../site/cm/codemirror.css">
 <link rel="stylesheet" href="../site/katex/katex.min.css">
 <link rel="stylesheet" href="../site/editor.css">
 <link rel="stylesheet" href="../site/tables.css">
 <link rel="stylesheet" media="print" href="../site/print.css">
 
-<script src="../site/lib/codemirror.js"></script>
-<script src="../site/lib/closebrackets.js"></script>
-<script src="../site/lib/matchbrackets.js"></script>
-<script src="../site/lib/simple.js"></script>
+<script src="../site/cm/codemirror.js"></script>
+<script src="../site/cm/closebrackets.js"></script>
+<script src="../site/cm/matchbrackets.js"></script>
+<script src="../site/cm/simple.js"></script>
 <script src="../site/katex/katex.min.js"></script>
 <script src="../site/katex/mhchem.min.js"></script>
 <script src="../site/marked.js"></script>
