--- a/site/examples.html
+++ b/site/examples.html
@@ -7,16 +7,16 @@
 <title>Hurmet Examples</title>
 
 <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="lib/codemirror.css">
+<link rel="stylesheet" href="cm/codemirror.css">
 <link rel="stylesheet" href="katex/katex.min.css">
 <link rel="stylesheet" href="editor.css">
 <link rel="stylesheet" href="tables.css">
 <link rel="stylesheet" media="print" href="print.css">
 
-<script src="lib/codemirror.js" defer></script>
-<script src="lib/closebrackets.js" defer></script>
-<script src="lib/matchbrackets.js" defer></script>
-<script src="lib/simple.js" defer></script>
+<script src="cm/codemirror.js" defer></script>
+<script src="cm/closebrackets.js" defer></script>
+<script src="cm/matchbrackets.js" defer></script>
+<script src="cm/simple.js" defer></script>
 <script src="katex/katex.min.js"></script>
 <script src="katex/mhchem.min.js" defer></script>
 <script src="marked.js" defer></script>
