Add ok zone to landing page example.

--- a/site/index.html
+++ b/site/index.html
@@ -83,7 +83,7 @@ unit, in,in²
 
 <p><span class="hurmet-calc" data-entry="ρ = A_s / A_g = ??"></span>, reinforcement ratio</p>
 
-<p><span class="hurmet-calc" data-entry="test = 0.01 ≤ ρ ≤ 0.08 = ?"></span>, ok per ACI 318-14 section 10.6</p>
+<p><span class="hurmet-calc" data-entry="test = 0.01 ≤ ρ ≤ 0.08 = ?"></span>, <span class="hurmet-calc" data-entry="{&quot;ok&quot; if test; \red &quot;ng&quot; otherwise} = @"></span> per ACI 318-14 section 10.6</p>
 
 </div> <!-- editor -->
 
