Fix typo in example.

--- a/site/index.html
+++ b/site/index.html
@@ -81,7 +81,7 @@
 <pre><code>f_c′, f_c′′, f_yr, ρ_0, ρ_max, E_c, n_c = projectParameters["f_c′", "f_c′′", "f_yr", "ρ_0", "ρ_max", "E_c", "n_c"] = !</code></pre>
 
 <p></p>
-<p>Hurmet will render those two line of code this way:</p>
+<p>Hurmet will render those two lines of code this way:</p>
 
 <p><span class="hurmet-calc" data-entry="projectParameters = fetch(&quot;https://gist.githubusercontent.com/ronkok/cbbf6cde15ac1b4c1e65cc338970043a/raw/1701022ed4d571b82fd0afcac182e0b430fa17c5/ParentTrial.hrms&quot;) = !"></span></p>
 
