Use Temml to render math in Firefox

--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="cm/codemirror.css">
 <link rel="stylesheet" href="katex/katex.min.css">
+<link rel="stylesheet" href="temml/temml-dual.css">
 <link rel="stylesheet" href="editor.css">
 <link rel="stylesheet" href="tables.css">
 <link rel="stylesheet" media="print" href="print.css">
@@ -18,6 +19,7 @@
 <script src="cm/matchbrackets.js" defer></script>
 <script src="cm/simple.js" defer></script>
 <script src="katex/katex.min.js"></script>
+<script src="temml/temml.min.js"></script>
 <script src="katex/mhchem.min.js" defer></script>
 <script src="marked.js" defer></script>
 <script src="chart.min.js" async></script>
