Change temml.dual.css to temml.css

--- a/preview/examples.html
+++ b/preview/examples.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="../site/styles.css">
 <link rel="stylesheet" href="../site/cm/codemirror.css">
 <link rel="stylesheet" href="../site/katex/katex.min.css">
+<link rel="stylesheet" href="../site/temml/temml.css">
 <link rel="stylesheet" href="../site/editor.css">
 <link rel="stylesheet" href="../site/tables.css">
 <link rel="stylesheet" media="print" href="../site/print.css">
@@ -18,6 +19,7 @@
 <script src="../site/cm/matchbrackets.js"></script>
 <script src="../site/cm/simple.js"></script>
 <script src="../site/katex/katex.min.js"></script>
+<script src="../site/temml/temml.min.js"></script>
 <script src="../site/katex/mhchem.min.js"></script>
 <script src="../site/marked.js"></script>
 <script src="../site/chart.min.js"></script>
