--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="cm/codemirror.css">
 <link rel="stylesheet" href="katex/katex.min.css">
-<link rel="stylesheet" href="temml/temml-dual.css">
+<link rel="stylesheet" href="temml/temml.css">
 <link rel="stylesheet" href="editor.css">
 <link rel="stylesheet" href="tables.css">
 <link rel="stylesheet" media="print" href="print.css">
