Add dataframe() function

--- a/site/index.html
+++ b/site/index.html
@@ -73,6 +73,16 @@
 
 <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
+<h3>New Features</h3>
+
+<p>This week, Hurmet has three new features:</p>
+
+<ol>
+  <li>Centered paragraphs. Available via the <img src="images/align-center.svg" alt="align-center"> button.</li>
+  <li>Math in display mode, which centers the cell and enlarges integration symbols. Get display mode by first setting a paragraph to centered, then creating a calculation cell or a TeX cell.</li>
+  <li>New function <em>dataframe(a, b, …)</em>. Takes vectors as arguments and returns a dataframe.</li>
+</ol>
+
 <p></p>
 </div> <!-- editor -->
 
